Add reducer and tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,8 @@ sonar.projectKey=CaRuaLeS_202301-W7CH5-carlos-ruiz-front
 sonar.organization=caruales
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions = src/**/*.test.*, js/**/*.js
+sonar.coverage.exclusions = src/index.*,
+src/reportWebVitals.ts, **/**/**/*.test.*
 sonar.sources=.
 
 # This is the name and version displayed in the SonarCloud UI.
